Fixed post overflow issue

--- a/src/Styles/create.css
+++ b/src/Styles/create.css
@@ -1,5 +1,5 @@
 /* White background */
-.post-box{
+.create-box{
     background-color: white;
     display: flex;
     flex-flow: column wrap;
@@ -14,7 +14,7 @@
     padding-right: 2.5em;
 }
 
-.post-box h1{
+.create-box h1{
     font-family: 'Bebas Neue', cursive;
     font-size: 5vw;
     color: #0C2340;
@@ -23,7 +23,7 @@
     margin-bottom: 0;
 }
 
-.post-box p{
+.create-box p{
     font-family: 'Bebas Neue', cursive;
     font-size: 2vw;
     color: #0C2340;
@@ -47,7 +47,7 @@
 }
 
 /* Text input CSS */
-.post-box input[type='text'], input[type='password']{
+.create-box input[type='text'], input[type='password']{
     display: block;
     border: none;
     background: transparent;
@@ -57,13 +57,13 @@
     width: 60%;
 }
 
-.post-box input[type='text']:focus, input[type='password']:focus{
+.create-box input[type='text']:focus, input[type='password']:focus{
     outline: none;
     border-bottom: 1px solid #0C2340;
     background: rgb(238, 238, 238);
 }
 
-.post-box textarea{
+.create-box textarea{
     background: white;
     width: 100%;
     height: 50%;
@@ -71,21 +71,21 @@
     resize: none;
 }
 
-.post-box textarea::placeholder{
+.create-box textarea::placeholder{
     font-size: 1em;
     font-family: 'Inter', sans-serif;
 }
 
 /* Custom scrollbar for textarea */
-.post-box textarea::-webkit-scrollbar {
+.create-box textarea::-webkit-scrollbar {
     width: 10px;
 }
 
-.post-box textarea::-webkit-scrollbar-track {
+.create-box textarea::-webkit-scrollbar-track {
     background-color: rgb(238, 238, 238);
 }
 
-.post-box textarea::-webkit-scrollbar-thumb {
+.create-box textarea::-webkit-scrollbar-thumb {
     background-color: #0C2340;
     border-radius: 3px;
 }
